# agent-analytics-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: db.py  server.py
src/tools/: analytics.py
